--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-certifi==2018.8.24
-chardet==3.0.4
-Click==7.0
-Flask==2.2.5
-idna==2.7
-itsdangerous==0.24
+certifi>=2018.8.24
+chardet>=3.0.4
+Click>=7.0
+Flask>=2.2.5
+idna>=2.7
+itsdangerous>=0.24
 Jinja2>=2.10.1
-MarkupSafe==1.0
-requests==2.19.1
-six==1.11.0
+MarkupSafe>=1.0
+requests>=2.19.1
+six>=1.11.0
 urllib3>=1.24.2
-uWSGI==2.0.17.1
+uWSGI>=2.0.17.1
 Werkzeug>=0.15.3
